--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="normalize.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
+    <div>
+        <div class="players">
+            <div id="player1">
+                <h5>Player 1</h5>
+            </div>
+            <div id="player2">
+                <h5>Player 2</h5>
+            </div>
+        </div>
+        <div class="grid-container"></div>
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
