--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    <div>
+    <div class="body">
+        <button id="playButton">PLAY</button>
         <div class="players">
             <div id="player1">
                 <h5>Player 1</h5>
